[package]
name = "harmony"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = "0.11.27"
rspotify = "0.14.0"
self_update = { version = "0.42.0", features = ["archive-tar", "compression-flate2"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend", "collector", "voice"] }
songbird = { version = "0.4.6", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["all"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
